# workmy

./: .gitignore  ADMIN_GUIDE.md  CHANGELOG.md  CHANGELOG_P2.md  DEPLOY_CHECKLIST.md  DOCUMENTATION.md  IMPROVEMENTS_IMPLEMENTED.md  QUICK_REFERENCE_P2.md  README.md  REFATORACAO_COMPLETA.md  RESUMO_FINAL.md  RESUMO_REFATORACAO_P2.md  RESUMO_REMOCAO_MOCKADOS.md  SECURITY_AUDIT.md  SECURITY_IMPLEMENTATION.md  TESTE_APIS_FINAL.md  build.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  stitch_info.txt  stitch_screen_html.txt
N2-PMI/: README.md  (+9 more)
backend/: .env.example  .gitignore  GUIA_ATUALIZACAO_P2.md  RELATORIO_MIGRACAO_P2.md  build.sh  pyproject.toml  requirements.txt  start.sh
backend/api/: api.py  api_v1.py  auth.py  cache.py  clientes.py  dashboard.py  events.py  filters.py  health.py  pagamento_serializers.py  pagamentos.py  pagination.py  pdf_generator.py  projeto_serializers.py  projetos.py  realtime.py  schemas.py  servico_serializers.py  servicos.py  stitch.py
backend/core/: settings.py  urls.py
backend/gestao_freelas/: admin.py  models.py  tests.py
backend/gestao_freelas/migrations/: 0003_remove_cliente_email_telefone_unique.py  0004_alter_pagamento_tipo_pagamento.py  0005_alter_pagamento_tipo_pagamento.py  0006_pagamento_atualizado_em.py  0007_projeto_recorrencia_pagamento_referencia.py  0008_pagamento_data_index.py  0009_projeto_data_entrega_projeto_progresso_and_more.py  0010_consolidate_projeto_ativo.py  0011_soft_delete_and_audit.py  0012_add_performance_indexes.py  0013_integrity_constraints.py  (+5 more)
backend/usuarios/: admin.py
(+168 files in other folders)
